service.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami
spec:
  selector:
    role: server
  ports:
    - port: 80
      name: http
